--- a/2.create_iot_thing.md
+++ b/2.create_iot_thing.md
@@ -4,11 +4,16 @@ refer: https://iot-device-management.workshop.aws/en/
 
 ## Env
 ```
-THING_NAME=test_thing
-IOT_TOPIC=iot/test
+export PS1="\n[\u@\h \W]$ "
+sudo su
+cd
 
-# Get IoT Endpoint
-IOT_ENDPOINT=$(aws iot describe-endpoint --endpoint-type iot:Data-ATS  --region $AWS_REGION| jq -r '.endpointAddress')
+export AWS_REGION=$(curl -s 169.254.169.254/latest/dynamic/instance-identity/document | jq -r '.region')
+
+export THING_NAME=test_thing
+export IOT_TOPIC=iot/test
+
+export IOT_ENDPOINT=$(aws iot describe-endpoint --endpoint-type iot:Data-ATS  --region $AWS_REGION| jq -r '.endpointAddress')
 echo $IOT_ENDPOINT
 ```
 
@@ -63,6 +68,7 @@ pip3 install AWSIoTPythonSDK
 ```
 
 ## Test publish message
+- create python test program
 ```
 cat <<EOF > publish.py
 from AWSIoTPythonSDK.MQTTLib import AWSIoTMQTTClient
@@ -90,8 +96,19 @@ print("Message Published", publish_datetime)
 mqttc.disconnect()
 EOF
 ```
+- run python program
+```
+python3 publish.py
+```
+- check on AWS console
+  - IOT Core > Test > MQTT test client > Subscribe to a topic
+  - Topic Name: 
+  ```
+  iot/test
+  ```
 
 ## Test subscribe message
+- create python test program
 ```
 cat <<EOF > subscribe.py
 from AWSIoTPythonSDK.MQTTLib import AWSIoTMQTTClient
@@ -128,3 +145,19 @@ mqttc.disconnect()
 
 EOF
 ```
+- run python program
+```
+python3 subscribe.py
+```
+- check on AWS console
+  - IOT Core > Test > MQTT test client > Publish to a topic
+  - Topic Name: 
+  ```
+  iot/test
+  ```
+  - Message payload:
+  ```
+  {
+    "message": "Hello from AWS IoT console"
+  }
+  ```
