--- a/3.device_shadow.md
+++ b/3.device_shadow.md
@@ -1,7 +1,23 @@
 
 # Device Shadow
 
+## Env
+```
+export PS1="\n[\u@\h \W]$ "
+sudo su
+cd
+
+export AWS_REGION=$(curl -s 169.254.169.254/latest/dynamic/instance-identity/document | jq -r '.region')
+
+export THING_NAME=test_thing
+export IOT_TOPIC=iot/test
+
+export IOT_ENDPOINT=$(aws iot describe-endpoint --endpoint-type iot:Data-ATS  --region $AWS_REGION| jq -r '.endpointAddress')
+echo $IOT_ENDPOINT
+```
+
 ## Update shadow
+- create python test program
 ```
 cat <<EOF > shadow_update.py
 
@@ -59,8 +75,13 @@ mqttShadowClient.disconnect()
 
 EOF
 ```
+- run python program
+```
+python3 shadow_update.py
+```
 
-## Listen shadow update
+## Listen shadow update (another session)
+- create python test program
 ```
 cat <<EOF > shadow_listen.py
 
@@ -106,8 +127,13 @@ mqttShadowClient.disconnect()
 
 EOF
 ```
+- run python program
+```
+python3 shadow_listen.py
+```
 
-## Subscribe shadow message
+
+## Subscribe shadow message (optional)
 ```
 cat <<EOF > shadow_subscribe.py
 from AWSIoTPythonSDK.MQTTLib import AWSIoTMQTTClient
