--- a/4.create_rule.md
+++ b/4.create_rule.md
@@ -2,6 +2,21 @@
 # Create Rule
 refer: http://iot.awsworkshops.com/aws-iot-core/lab8-ddb/
 
+## Env
+```
+export PS1="\n[\u@\h \W]$ "
+sudo su
+cd
+
+export AWS_REGION=$(curl -s 169.254.169.254/latest/dynamic/instance-identity/document | jq -r '.region')
+
+export THING_NAME=test_thing
+export IOT_TOPIC=iot/test
+
+export IOT_ENDPOINT=$(aws iot describe-endpoint --endpoint-type iot:Data-ATS  --region $AWS_REGION| jq -r '.endpointAddress')
+echo $IOT_ENDPOINT
+```
+
 ## Create DynamoDB Table
 ```
 aws dynamodb create-table --region $AWS_REGION  \
@@ -71,6 +86,7 @@ aws iot create-topic-rule --region $AWS_REGION \
 ```
 
 ## Publish test messages
+- create python test program
 ```
 cat <<EOF > rule_publish.py
 
@@ -101,4 +117,8 @@ for x in range(0,100):
 mqttc.disconnect()
 
 EOF
+```
+- run python program
+```
+python3 rule_publish.py
 ```
