--- a/7.greengrass_v1_cn.md
+++ b/7.greengrass_v1_cn.md
@@ -14,10 +14,9 @@
 ```
 sudo su
 cd
-
-export AWS_DEFAULT_REGION=ap-northeast-1
-
 yum install -y jq
+
+export AWS_DEFAULT_REGION=$(curl -s 169.254.169.254/latest/dynamic/instance-identity/document | jq -r '.region')
 
 ```
 ### 为Greengrass Group创建role 角色
@@ -132,7 +131,7 @@ aws ec2 authorize-security-group-ingress \
     --group-id $SECURITY_GROUP \
     --protocol tcp \
     --port 22 \
-    --cidr <MYIP>/32
+    --cidr MYIP/32
 
 ```
 
@@ -181,9 +180,9 @@ aws lambda create-function \
 ```
 sudo su
 cd
-
-export AWS_DEFAULT_REGION=ap-northeast-1
 yum install -y jq
+
+export AWS_DEFAULT_REGION=$(curl -s 169.254.169.254/latest/dynamic/instance-identity/document | jq -r '.region')
 
 adduser --system ggc_user
 groupadd --system ggc_group
@@ -248,7 +247,7 @@ GROUP_CERTIFICATE_AUTHORITY_ID=$(aws greengrass list-group-certificate-authoriti
 
 CORE_CA_CERT=$(aws greengrass get-group-certificate-authority --group-id $GREENGRASS_GROUP_ID --certificate-authority-id $GROUP_CERTIFICATE_AUTHORITY_ID |jq -r ".PemEncodedCertificate")
 
-echo -e "cat <<EOF > GreengrassGroupCore_CA.pem\n$CORE_CA_CERT\nEOF"
+echo -e "cat <<EOF > GreengrassGroup_CA.pem\n$CORE_CA_CERT\nEOF"
 
 ```
 
@@ -258,8 +257,10 @@ echo -e "cat <<EOF > GreengrassGroupCore_CA.pem\n$CORE_CA_CERT\nEOF"
 ```
 sudo su
 cd
+yum install -y jq
 
-export AWS_DEFAULT_REGION=ap-northeast-1
+export AWS_DEFAULT_REGION=$(curl -s 169.254.169.254/latest/dynamic/instance-identity/document | jq -r '.region')
+
 THING_NAME=GreengrassGroup_Display
 
 yum install -y jq
@@ -280,7 +281,7 @@ echo $CERTIFICATE_ARN
 
 POLICY_NAME=${THING_NAME}_policy
 aws iot create-policy --policy-name ${POLICY_NAME}  \
-  --policy-document '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action": ["iot:Publish","iot:Receive","iot:Subscribe","iot:Connect"],"Resource":"*"}]}'
+  --policy-document '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action": ["iot:Publish","iot:Receive","iot:Subscribe","iot:Connect","greengrass:Discover"],"Resource":"*"}]}'
 
 aws iot attach-policy --policy-name $POLICY_NAME \
   --target $CERTIFICATE_ARN  
@@ -289,7 +290,22 @@ aws iot attach-thing-principal --thing-name $THING_NAME \
   --principal $CERTIFICATE_ARN 
 
 ```
-- 从GreengrassCore虚机拷贝GreengrassGroupCore_CA.pem
+- 获得GreengrassGroup CA
+(optional)从GreengrassCore虚机拷贝GreengrassGroup_CA.pem
+
+```
+export GREENGRASS_DISCOVER=$(curl --cert $THING_NAME.certificate.pem --key $THING_NAME.private.key https://greengrass-ats.iot.$AWS_DEFAULT_REGION.amazonaws.com:8443/greengrass/discover/thing/$THING_NAME)
+export GREENGRASSCORE_ADDR=$(echo $GREENGRASS_DISCOVER| jq -r '.GGGroups[0].Cores[0].Connectivity[0].HostAddress')
+
+echo $GREENGRASSCORE_ADDR
+
+export GREENGRASSGROUP_CA=$(echo $GREENGRASS_DISCOVER| jq -r '.GGGroups[0].CAs[0]')
+
+echo -e "$GREENGRASSGROUP_CA" 
+
+echo -e "$GREENGRASSGROUP_CA"  > GreengrassGroup_CA.pem
+
+```
 - 新建python program测试程序
 ```
 cat <<EOF > greengrass_group_device_display.py
@@ -356,8 +372,10 @@ EOF
 ```
 sudo su
 cd
+yum install -y jq
 
-export AWS_DEFAULT_REGION=ap-northeast-1
+export AWS_DEFAULT_REGION=$(curl -s 169.254.169.254/latest/dynamic/instance-identity/document | jq -r '.region')
+
 THING_NAME=GreengrassGroup_Button
 
 yum install -y jq
@@ -378,7 +396,7 @@ echo $CERTIFICATE_ARN
 
 POLICY_NAME=${THING_NAME}_policy
 aws iot create-policy --policy-name ${POLICY_NAME}  \
-  --policy-document '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action": ["iot:Publish","iot:Receive","iot:Subscribe","iot:Connect"],"Resource":"*"}]}'
+  --policy-document '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action": ["iot:Publish","iot:Receive","iot:Subscribe","iot:Connect","greengrass:Discover"],"Resource":"*"}]}'
 
 aws iot attach-policy --policy-name $POLICY_NAME \
   --target $CERTIFICATE_ARN  
@@ -387,7 +405,23 @@ aws iot attach-thing-principal --thing-name $THING_NAME \
   --principal $CERTIFICATE_ARN 
 
 ```
-- 从GreengrassCore虚机拷贝GreengrassGroupCore_CA.pem
+- 获得GreengrassGroup CA
+(optional)从GreengrassCore虚机拷贝GreengrassGroup_CA.pem
+
+```
+export GREENGRASS_DISCOVER=$(curl --cert $THING_NAME.certificate.pem --key $THING_NAME.private.key https://greengrass-ats.iot.$AWS_DEFAULT_REGION.amazonaws.com:8443/greengrass/discover/thing/$THING_NAME)
+export GREENGRASSCORE_ADDR=$(echo $GREENGRASS_DISCOVER| jq -r '.GGGroups[0].Cores[0].Connectivity[0].HostAddress')
+
+echo $GREENGRASSCORE_ADDR
+
+export GREENGRASSGROUP_CA=$(echo $GREENGRASS_DISCOVER| jq -r '.GGGroups[0].CAs[0]')
+
+echo -e "$GREENGRASSGROUP_CA" 
+
+echo -e "$GREENGRASSGROUP_CA"  > GreengrassGroup_CA.pem
+
+```
+
 - 新建python program测试程序
 ```
 cat <<EOF > greengrass_group_device_button.py
@@ -456,7 +490,9 @@ cd
 
 THING_NAME=GreengrassGroup_Display
 
-python3 greengrass_group_device_display.py -t /ratchet-lcd -e 10.20.1.200 -c $THING_NAME.certificate.pem -k $THING_NAME.private.key -r GreengrassGroupCore_CA.pem
+
+python3 greengrass_group_device_display.py -t /ratchet-lcd -e $GREENGRASSCORE_ADDR -c $THING_NAME.certificate.pem -k $THING_NAME.private.key -r GreengrassGroup_CA.pem
+
 ```
 
 ### Systems Manager - EC2 Greengrass Button (10.20.1.210)
@@ -467,21 +503,21 @@ cd
 
 THING_NAME=GreengrassGroup_Button
 
-python3 greengrass_group_device_button.py -t /ratchet -e 10.20.1.200 -c $THING_NAME.certificate.pem -k $THING_NAME.private.key -r GreengrassGroupCore_CA.pem
+python3 greengrass_group_device_button.py -t /ratchet -e $GREENGRASSCORE_ADDR -c $THING_NAME.certificate.pem -k $THING_NAME.private.key -r GreengrassGroup_CA.pem
 ```
 
 ### 在AWS Console接收Device信息
 - IOT > Test > MQTT test client > Subscribe to a topic
 - Topic Name: 
 ```
-/rachet-cloud
+/ratchet-cloud
 ```
 
 ### 从AWS Console发送控制控制命令
 - IOT > Test > MQTT test client > Publish to a topic
 - Topic Name: 
 ```
-/rachet-cloud
+/ratchet-cloud-control
 ```
 - Message payload:
 ```
