--- a/1.init.md
+++ b/1.init.md
@@ -3,19 +3,21 @@
 
 ## Environment
 ```
-sudo yum install -y jq
 export PS1="\n[\u@\h \W]$ "
-cd /home/ssm-user
 sudo su
-export AWS_REGION=ap-southeast-1
+cd
+yum install -y jq
+
+export AWS_REGION=$(curl -s 169.254.169.254/latest/dynamic/instance-identity/document | jq -r '.region')
 export AWS_ACCOUNTID=$(aws sts get-caller-identity| jq -r '.Account')
 export S3_BUCKET=$(curl -s http://169.254.169.254/latest/meta-data/instance-id)
-echo -e "S3 BUCKET:\n$S3_BUCKET"
-THING_NAME=test_thing
-# Get IoT Endpoint
-IOT_ENDPOINT=$(aws iot describe-endpoint --endpoint-type iot:Data-ATS  --region $AWS_REGION| jq -r '.endpointAddress')
+
+export THING_NAME=test_thing
+export IOT_ENDPOINT=$(aws iot describe-endpoint --endpoint-type iot:Data-ATS  --region $AWS_REGION| jq -r '.endpointAddress')
 echo $IOT_ENDPOINT
+
 ```
+
 
 ## Install Tools
 ```
