--- a/8.device_certs.md
+++ b/8.device_certs.md
@@ -1,6 +1,6 @@
 
 # Device Certs
-参考链接: http://iot.awsworkshops.com/aws-greengrass/lab17-greengrassbasics/
+参考链接: https://aws.amazon.com/blogs/iot/setting-up-just-in-time-provisioning-with-aws-iot-core/
 
 ## 初始化配置操作 EC2 - TestInstance
 1. 点击左上角“Services”，然后搜索“Systems Manager”
@@ -83,14 +83,15 @@ cat deviceCert.crt rootCA.pem > deviceCertAndCACert.crt
 ```
 
 ### 激活IoT Thing和证书
-amazon-linux-extras install epel
+```
+amazon-linux-extras install epel -y
 yum install -y mosquitto
 
 mosquitto_pub --cafile rootCA.pem --cert deviceCertAndCACert.crt --key deviceCert.key -h $IOT_ENDPOINT -p 8883 -q 1 -t foo/bar -I anyclientID --tls-version tlsv1.2 -m "Hello" -d
+```
 
 
-
-## Test publish message
+## Test publish message(optional)
 - create python test program
 ```
 cat <<EOF > JITP_publish.py
