--- a/1.init.md
+++ b/1.init.md
@@ -1,12 +1,21 @@
 
 # 1. init
 
-## Environment
+## 登陆操作 EC2 - TestInstance
+1. 点击左上角“Services”，然后搜索“Systems Manager”
+2. 点击打开Systems Manager
+3. 在左面导航栏中，找到Session Manager
+4. 点击进入Session Manager
+5. 点击右侧“Start Session”
+6. 选中“TestInstance”，点击“Start Session”
+7. 进入了EC2 instance。
+8. 执行下列命令
 ```
-export PS1="\n[\u@\h \W]$ "
 sudo su
 cd
 yum install -y jq
+
+export AWS_DEFAULT_REGION=$(curl -s 169.254.169.254/latest/dynamic/instance-identity/document | jq -r '.region')
 
 export AWS_REGION=$(curl -s 169.254.169.254/latest/dynamic/instance-identity/document | jq -r '.region')
 export AWS_ACCOUNTID=$(aws sts get-caller-identity| jq -r '.Account')
@@ -21,8 +30,7 @@ echo $IOT_ENDPOINT
 
 ## Install Tools
 ```
-sudo yum install -y jq
-sudo yum install -y python3
+yum install -y python3
 ```
 
 ## Init IoT Core
@@ -37,6 +45,7 @@ aws iam attach-role-policy --role-name $ROLE_NAME --policy-arn arn:aws:iam::aws:
 aws iam attach-role-policy --role-name $ROLE_NAME --policy-arn arn:aws:iam::aws:policy/service-role/AWSIoTRuleActions
 
 echo $IAM_ROLE_ARN
+
 
 ```
 
@@ -99,5 +108,5 @@ aws iot describe-index --index-name "AWS_Things"  --region $AWS_REGION
 aws iot search-index --query-string "thingTypeName:*"  --region $AWS_REGION
 aws iot search-index --query-string "thingGroupNames:*"  --region $AWS_REGION
 aws iot search-index --query-string "attributes.type:*"  --region $AWS_REGION
-
 ```
+
