--- a/3.device_shadow.md
+++ b/3.device_shadow.md
@@ -80,6 +80,9 @@ EOF
 python3 shadow_update.py
 ```
 
+- check on AWS console
+    - IOT Core > Manage > Things > test_thing > Device Shadow > Classic Shadow
+
 ## Listen shadow update (another session)
 - create python test program
 ```
